<resources>
    <string name="app_name">Madarsoft Database</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_information">Enter your information</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="job_title">Job Title</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="saved_users">Saved Users</string>
    <string name="no_saved_users_found_add_more_using_the_button_below">No saved users found! Add more using the button below</string>
    <string name="add_user">add_user</string>
    <string name="age_23">Age: 23</string>
    <string name="gender_male">Gender: Male</string>
    <string name="android_developer">Android Developer</string>
</resources>